--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@allswap/sdk",
   "license": "MIT",
-  "version": "0.1",
+  "version": "2.0.0",
   "description": "🛠 An SDK for building applications on top of Allswap.",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -11,8 +11,8 @@
   "repository": "https://github.com/Allswap/allswap-sdk",
   "keywords": [
     "uniswap",
-    "allswap",
-    "ethereum"
+    "ethereum",
+    "allswap"
   ],
   "module": "dist/sdk.esm.js",
   "scripts": {
@@ -47,7 +47,7 @@
     "@types/big.js": "^4.0.5",
     "@types/jest": "^24.0.25",
     "babel-plugin-transform-jsbi-to-bigint": "^1.3.1",
-    "tsdx": "^0.12.3"
+    "tsdx": "^0.14.1"
   },
   "engines": {
     "node": ">=10"
